--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
-    "start": "node index.js"
+    "build": "node index.js"
   },
+  
   "dependencies": {
     "body-parser": "^1.20.2",
     "crypto": "^1.0.1",
